--- a/receive.html
+++ b/receive.html
@@ -73,14 +73,8 @@
                  */
                 function initialize() {
                     // Create own peer object with connection to shared PeerJS server
-                    // peer = new Peer(null, {
-                    //     debug: 2
-                    // });
-
                     peer = new Peer(null, {
-                        host: '172.20.10.7',
-                        port: 8080,
-                        path: '/peer/server',
+                        debug: 2,
                     });
 
                     peer.on('open', function (id) {
